# spore

./: CMakeLists.txt
include/: CMakeLists.txt
include/sprx/: CMakeLists.txt  spore.h
include/sprx/container/: CMakeLists.txt  vector.h
include/sprx/core/: CMakeLists.txt  assert.h  core.h  error.h  essentials.h  info.h  printf.h  sprintf.h  terminate.h
source/: CMakeLists.txt
source/container/: CMakeLists.txt  vector.c
source/core/: CMakeLists.txt  assert.c  printf.c  sprintf.c  terminate.c
